--- a/assets/privacy-policy-linkedin.html
+++ b/assets/privacy-policy-linkedin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
-    <title>Privacy Policy for LinkedIn Contact Form</title>
+    <title>DRAFT Privacy Policy for LinkedIn Contact Form</title>
 </head>
 <style>
     body {
@@ -38,7 +38,7 @@
     </ul>
 
     <h2>4. Data Retention</h2>
-    <p>Your data will be stored for a period of [specify period, e.g., "24 months"], after which it will be deleted. If you wish for your data to be deleted before this period, please contact us at [Your Contact Email].</p>
+    <p>If you wish for your data to be deleted, please contact us at info@mastix.se.</p>
 
     <h2>5. Data Sharing</h2>
     <p>We will never sell, distribute, or lease your personal data to third parties unless we have your express permission or are required by law.</p>
